--- a/index.html
+++ b/index.html
@@ -249,9 +249,7 @@
   </template>
 
   <script src="js/util.js"></script>
-  <!--<script src="js/data.js"></script>-->
-  <script src="js/load.js"></script>
-  <script src="js/save.js"></script>
+  <script src="js/backend.js"></script>
   <script src="js/pin.js"></script>
   <script src="js/card.js"></script>
   <script src="js/map.js"></script>
